--- a/content/content.html
+++ b/content/content.html
@@ -14,7 +14,11 @@
 <h2 id="what-is-discordia-">What is Discordia?</h2>
 <hr />
 <p>Discordia is the Roman equivalent of <a href="https://en.wikipedia.org/wiki/Eris_(mythology)">Eris, the Goddess of Discord</a>.</p>
-<p>This monorepo, on the other hand, is a tool for creating Discord bots. The core of the framework is made of two pieces - <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a>. The <code>framework</code> module is used to register your discord bot by giving it your discord bot token as well as giving the bot a name to respond to. The <code>action</code> module is how you handle the message responses. It allows you to specify accessors (conditions under which the bot should respond) and responses (the response to be given if the accessor is met). You can also publish the actions you make individually so that others can add those actions to their bots. For a tutorial on how to setup a project using <code>@discordia</code> you can check out the <a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">getting started guide</a>.</p>
+<p>This monorepo, on the other hand, is a tool for creating Discord bots. The core of the framework is made of two pieces - <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a>.</p>
+<p>The <code>framework</code> module is used to register your discord bot by giving it your discord bot token as well as giving the bot a name to respond to.</p>
+<p>The <code>action</code> module is how you handle the message responses. It allows you to specify accessors (conditions under which the bot should respond) and responses (the response to be given if the accessor is met). You can also publish the actions you make individually so that others can add those actions to their bots.</p>
+<p>For a tutorial on how to setup a project using <code>@discordia</code> you can check out the <a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">getting started guide</a>.</p>
+<p>You can also use one of the <a href="#generators">generators</a> to bootstrap your own bot or bootstrap an action to publish on its own.</p>
 <h2 id="packages">Packages</h2>
 <hr />
 <p align="center">
@@ -24,9 +28,6 @@
   <a href="https://www.npmjs.com/package/@discordia/action">
     <img alt="@discordia/action" src="https://img.shields.io/npm/v/@discordia/action?label=%40discordia%2Faction" style="max-width: 100%;">
   </a>
-  <a href="https://www.npmjs.com/package/@discordia/create-discordia-bot">
-    <img alt="@discordia/create-discordia-bot" src="https://img.shields.io/npm/v/@discordia/create-discordia-bot?label=%40discordia%2Fcreate-discordia-bot" style="max-width: 100%;">
-  </a>
   <a href="https://www.npmjs.com/package/@discordia/default-help">
     <img alt="@discordia/default-help" src="https://img.shields.io/npm/v/@discordia/default-help?label=%40discordia%2Fdefault-help" style="max-width: 100%;">
   </a>
@@ -35,6 +36,18 @@
   </a>
   <a href="https://www.npmjs.com/package/@discordia/complete">
     <img alt="@discordia/complete" src="https://img.shields.io/npm/v/@discordia/complete?label=%40discordia%2Fcomplete" style="max-width: 100%;">
+  </a>
+</p>
+
+<h2 id="generators">Generators</h2>
+<hr />
+<p>Use these generators to quickly bootstrap projects related to the <code>@discordia</code> framework using <a href="https://nodejs.dev/the-npx-nodejs-package-runner">npx</a> or <a href="https://classic.yarnpkg.com/en/docs/cli/create/">yarn create</a>.</p>
+<p align="center">
+  <a href="https://www.npmjs.com/package/@discordia/create-discordia-bot">
+    <img alt="@discordia/create-discordia-bot" src="https://img.shields.io/npm/v/@discordia/create-discordia-bot?label=%40discordia%2Fcreate-discordia-bot" style="max-width: 100%;">
+  </a>
+  <a href="https://www.npmjs.com/package/@discordia/create-discordia-action">
+    <img alt="@discordia/create-discordia-action" src="https://img.shields.io/npm/v/@discordia/create-discordia-action?label=%40discordia%2Fcreate-discordia-action" style="max-width: 100%;">
   </a>
 </p>
 
