deploy: a8c58ba5194503e117b66a8086cdbe0084183da3

--- a/content/create-discordia-action.html
+++ b/content/create-discordia-action.html
@@ -4,7 +4,7 @@
 </blockquote>
 <p align="center">
   <a href="https://www.npmjs.com/package/@discordia/create-discordia-action">
-    <img alt="@discordia/create-discordia-action" src="https://img.shields.io/npm/v/@discordia/create-discordia-action?label=%40discordia%2Fdebug" style="max-width: 100%;">
+    <img alt="@discordia/create-discordia-action" src="https://img.shields.io/npm/v/@discordia/create-discordia-action?label=%40discordia%2Fcreate-discordia-action" style="max-width: 100%;">
   </a>
   <a href="https://www.npmjs.com/package/@discordia/create-discordia-action">
     <img alt="@discordia/create-discordia-action" src="https://img.shields.io/npm/dw/@discordia/create-discordia-action" style="max-width: 100%;">
@@ -13,7 +13,7 @@
 
 <h1 id="usage">Usage</h1>
 <hr />
-<p>Use this generator to quickly bootstrap the sheer minimum discordia action that can be shared and used in other bots created with the <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a>. Once this generator is complete you are a single <code>npm publish</code> away from a sharable action.</p>
+<p>Use this generator to quickly bootstrap the minimum <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a> that can be shared and used in other bots created with the <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a>. Once this generator is complete you are a single <code>npm publish</code> away from a sharable action.</p>
 <pre><code class="bash"># Run the module using npx
 npx @discordia/create-discordia-action
 
