--- a/content/create-discordia-bot.html
+++ b/content/create-discordia-bot.html
@@ -4,7 +4,7 @@
 </blockquote>
 <p align="center">
   <a href="https://www.npmjs.com/package/@discordia/create-discordia-bot">
-    <img alt="@discordia/create-discordia-bot" src="https://img.shields.io/npm/v/@discordia/create-discordia-bot?label=%40discordia%2Fdebug" style="max-width: 100%;">
+    <img alt="@discordia/create-discordia-bot" src="https://img.shields.io/npm/v/@discordia/create-discordia-bot?label=%40discordia%2Fcreate-discordia-bot" style="max-width: 100%;">
   </a>
   <a href="https://www.npmjs.com/package/@discordia/create-discordia-bot">
     <img alt="@discordia/create-discordia-bot" src="https://img.shields.io/npm/dw/@discordia/create-discordia-bot" style="max-width: 100%;">
