deploy: 05e0a0c725c26eeb32743f8bc43b88db147eb173

--- a/content/content.html
+++ b/content/content.html
@@ -10,15 +10,14 @@
   </a>
 </p>
 
-<p>See the <a href="https://mfasman95.github.io/discordia/">documentation site</a> for more info.</p>
 <h2 id="what-is-discordia-">What is Discordia?</h2>
 <hr />
 <p>Discordia is the Roman equivalent of <a href="https://en.wikipedia.org/wiki/Eris_(mythology)">Eris, the Goddess of Discord</a>.</p>
 <p>This monorepo, on the other hand, is a tool for creating Discord bots. The core of the framework is made of two pieces - <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a>.</p>
 <p>The <code>framework</code> module is used to register your discord bot by giving it your discord bot token as well as giving the bot a name to respond to.</p>
-<p>The <code>action</code> module is how you handle the message responses. It allows you to specify accessors (conditions under which the bot should respond) and responses (the response to be given if the accessor is met). You can also publish the actions you make individually so that others can add those actions to their bots.</p>
+<p>The <code>action</code> module is how you handle message responses. It allows you to specify accessors (conditions under which the bot should respond) and responses (the response to be given if the accessor is met). You can also publish the actions you make so that others can add those actions to their bots.</p>
 <p>For a tutorial on how to setup a project using <code>@discordia</code> you can check out the <a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">getting started guide</a>.</p>
-<p>You can also use one of the <a href="#generators">generators</a> to bootstrap your own bot or bootstrap an action to publish on its own.</p>
+<p>You can also use one of the <a href="#generators">generators</a> to <a href="https://mfasman95.github.io/discordia/create-discordia-bot">bootstrap your own bot</a> or <a href="https://mfasman95.github.io/discordia/create-discordia-action">bootstrap an action</a> to publish on its own.</p>
 <h2 id="packages">Packages</h2>
 <hr />
 <p align="center">
@@ -51,6 +50,8 @@
   </a>
 </p>
 
+<h2 id="actions">Actions</h2>
+<hr />
 <h2 id="getting-started"><a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">Getting Started</a></h2>
 <hr />
 <p>This guide will walk you through creating a bot from the <a href="http://discordapp.com/developers/">Discord developers site</a> as well as setting up your workspace to develop an <code>@discordia</code> bot with Node and NPM, and then finally how to use the <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a> modules.</p>
