--- a/content/readme.html
+++ b/content/readme.html
@@ -52,6 +52,13 @@
 
 <h2 id="actions">Actions</h2>
 <hr />
+<p align="center">
+  <a href="https://www.npmjs.com/package/@discordia/action-weather-current">
+    <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/v/@discordia/action-weather-current?label=%40discordia%action-weather-current" style="max-width: 100%;">
+  </a>
+</p>
+
+
 <h2 id="getting-started"><a href="https://mfasman95.github.io/discordia/gs_setup_your_bot">Getting Started</a></h2>
 <hr />
 <p>This guide will walk you through creating a bot from the <a href="http://discordapp.com/developers/">Discord developers site</a> as well as setting up your workspace to develop an <code>@discordia</code> bot with Node and NPM, and then finally how to use the <a href="https://mfasman95.github.io/discordia/framework">@discordia/framework</a> and <a href="https://mfasman95.github.io/discordia/action">@discordia/action</a> modules.</p>
