--- a/content/action-current-weather.html
+++ b/content/action-current-weather.html
@@ -4,7 +4,7 @@
 </blockquote>
 <p align="center">
   <a href="https://www.npmjs.com/package/@discordia/action-weather-current">
-    <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/v/@discordia/action-weather-current?label=%40discordia%2Fcomplete" style="max-width: 100%;">
+    <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/v/@discordia/action-weather-current?label=%40discordia%2Faction-weather-current" style="max-width: 100%;">
   </a>
   <a href="https://www.npmjs.com/package/@discordia/action-weather-current">
     <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/dw/@discordia/action-weather-current" style="max-width: 100%;">
