--- a/content/readme.html
+++ b/content/readme.html
@@ -54,7 +54,7 @@
 <hr />
 <p align="center">
   <a href="https://www.npmjs.com/package/@discordia/action-weather-current">
-    <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/v/@discordia/action-weather-current?label=%40discordia%action-weather-current" style="max-width: 100%;">
+    <img alt="@discordia/action-weather-current" src="https://img.shields.io/npm/v/@discordia/action-weather-current?label=%40discordia%2Faction-weather-current" style="max-width: 100%;">
   </a>
 </p>
 
