--- a/content/gs_setup_your_bot.html
+++ b/content/gs_setup_your_bot.html
@@ -13,7 +13,7 @@
 
 <h1 id="save-the-client-id">Save the Client ID</h1>
 <hr />
-<p>This link - <code>https://discordapp.com/oauth2/authorize?&amp;client_id={Client ID}&amp;scope=bot&amp;permissions={Permissions Integer}</code> - is the link used to invite users to your server. Replace <code>{Client ID}</code> in this link with the "Client ID" in the center of your page. We will get to <code>{Permissing Integer}</code> later.</p>
+<p>This link - <code>https://discordapp.com/oauth2/authorize?&amp;client_id={Client ID}&amp;scope=bot&amp;permissions={Permissions Integer}</code> - is the link used to invite users to your server. Replace <code>{Client ID}</code> in this link with the "Client ID" in the center of your page. We will get to <code>{Permissions Integer}</code> later.</p>
 <div style="width: 100%">
   <img src="img/gs_setup_your_bot/save_client_id.png" style="margin: auto; display: block; max-width: 100%;">
 </div>
