--- a/action-openweather-current/index.html
+++ b/action-openweather-current/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta http-equiv="refresh" content="0; url=../" />
         <script>
-            sessionStorage.setItem('redirectPath', 'action-current-weather/' + window.location.hash);
+            sessionStorage.setItem('redirectPath', 'action-openweather-current/' + window.location.hash);
         </script>
     </head>
 </html>
